Created component and set value from father to son

--- a/weather-app/src/app/modules/weather/page/weather-home/weather-home.component.html
+++ b/weather-app/src/app/modules/weather/page/weather-home/weather-home.component.html
@@ -17,4 +17,10 @@
       </fa-icon>
     </span>
   </form>
+  ''
 </div>
+
+<app-weather-card
+  *ngIf="weatherDataResponse"
+  [weatherDatas]="weatherDataResponse"
+></app-weather-card>
