Created a reactve form

--- a/stock-control/src/app/modules/home/home.component.html
+++ b/stock-control/src/app/modules/home/home.component.html
@@ -3,7 +3,7 @@
     <div
       class="flex justify-content-center align-content-center text-align-center"
     >
-      <form>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmitLoginForm()">
         <p-card
           styleClass="mt-10"
           header="Login"
@@ -13,15 +13,31 @@
           <div
             class="flex justify-content-center align-content-center text-align-center"
           >
-            <input type="email" pInputText placeholder="Email" />
+            <input
+              type="email"
+              pInputText
+              placeholder="Email"
+              formControlName="email"
+            />
           </div>
           <div
             class="flex justify-content-center align-content-center text-align-center mt-3"
           >
-            <input type="password" pInputText placeholder="Senha" />
+            <input
+              type="password"
+              pInputText
+              placeholder="Senha"
+              formControlName="password"
+            />
           </div>
           <div class="card flex justify-content-center mt-3">
-            <button type="submit" pButton pRiple label="Login"></button>
+            <button
+              type="submit"
+              pButton
+              pRiple
+              label="Login"
+              [disabled]="!this.loginForm.valid"
+            ></button>
           </div>
           <span
             class="flex justify-content-center align-content-center text-align-center mt-3 text-red-600 font-semibold"
@@ -32,7 +48,7 @@
         </p-card>
       </form>
 
-      <form>
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmitSignUpForm()">
         <p-card
           styleClass="mt-10"
           header="Criar conta"
@@ -42,20 +58,41 @@
           <div
             class="flex justify-content-center align-content-center text-align-center"
           >
-            <input type="text" pInputText placeholder="Nome" />
+            <input
+              type="text"
+              pInputText
+              placeholder="Nome"
+              formControlName="name"
+            />
           </div>
           <div
             class="flex justify-content-center align-content-center text-align-center mt-3"
           >
-            <input type="email" pInputText placeholder="Email" />
+            <input
+              type="email"
+              pInputText
+              placeholder="Email"
+              formControlName="email"
+            />
           </div>
           <div
             class="flex justify-content-center align-content-center text-align-center mt-3"
           >
-            <input type="password" pInputText placeholder="Senha" />
+            <input
+              type="password"
+              pInputText
+              placeholder="Senha"
+              formControlName="password"
+            />
           </div>
           <div class="card flex justify-content-center mt-3">
-            <button type="submit" pButton pRiple label="Criar conta"></button>
+            <button
+              type="submit"
+              pButton
+              pRiple
+              label="Criar conta"
+              [disabled]="!this.signupForm.valid"
+            ></button>
           </div>
           <span
             class="flex justify-content-center align-content-center text-align-center mt-3 text-red-600 font-semibold"
